# TIL_python

./: .gitignore  README.md  pyproject.toml  requirements.txt  skills-lock.json
.github/workflows/: update-readme.yml
TIL/CV/advance/: [Computer Vision Advanced] (1-5) ViT 구현하기.ipynb  [Computer Vision Advanced] (1-5) ViT 구현하기_refactor.ipynb  [Computer Vision Advanced] (2-6) DETR 구현하기.ipynb  [Computer Vision Advanced] (3-6) SegFormer 구현하기.ipynb
TIL/CV/advance/doc/: transformer-based-segmentation.md
TIL/CV/basic/: [CV Basic] (2-2) 고전 컴퓨터 비전 - 기초 실습.ipynb  [CV Basic] (2-4) 고전 컴퓨터 비전 - 심화 예제 실습.ipynb  [CV Basic] (4-5) CNN 불러오기.ipynb  [CV Basic] (5-3) CNN layer 시각화.ipynb  [CV Basic] (6-2) Image classification inference 해보기.ipynb  [CV_Basic] (8-4) U-Net 사용해보기.ipynb
TIL/DL/: 모델 학습법 실습.ipynb  성능 고도화 방법 실습.ipynb
TIL/crawling/: pandas_read_html.ipynb
TIL/data analysis/: Part 3. 데이터 분석 프로세스 (step by step).ipynb  df_mart.csv
TIL/excel_pandas/: rename.ipynb  sort_values.ipynb  vlookup.ipynb
TIL/ml/: pyproject.toml
TIL/nlp/Part 10. Natural Language Processing Basic/: [NLP Basic] (3-2) 텍스트 전처리 기초 실습.ipynb  [NLP Basic] (3-3) NLTK기반 자연언어처리 실습.ipynb  [NLP Basic] (3-4) 정규표현식 이론과 실습.ipynb  [NLP Basic] (6-3) RNN 계열 실습.ipynb  [NLP Basic] (6-5) Attention 실습.ipynb  [NLP Basic] (6-7) Transformer 기반 자연언어처리 실습.ipynb
TIL/nlp/Part 10. Natural Language Processing Basic 2/: [NLP Basic] (6-3) RNN 계열 실습.ipynb
TIL/nlp_advanced/: [NLP Basic] (3-2) 텍스트 전처리 기초 실습.ipynb
TIL/pytorch/: [PyTorch] (3-2) DNN 구현(1).ipynb  [PyTorch] (3-3) DNN 구현(2).ipynb  [PyTorch] (3-4) DNN 구현(3).ipynb  [PyTorch] (3-5) CNN 구현.ipynb  [PyTorch] (3-6) RNN 구현.ipynb  [PyTorch] (4-2) timm과 Hugging Face를 통한 전이 학습.ipynb  [PyTorch] (5-2) 디버깅.ipynb  [Pytorch] (2-2) 텐서 조작 (1).ipynb  [Pytorch] (2-3) 텐서 조작 (2).ipynb  model_exp1.pt  model_exp2.pt  model_exp3.pt  model_exp4.pt  model_exp5.pt
mlops/: nohup.out  requirements.txt
mlops/dataset/: popular.json
mlops/result/: popular.json
