[project]
name = "freeboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "alive-progress>=3.3.0",
    "beautifulsoup4",
    "category-encoders>=2.9.0",
    "fastapi>=0.128.0",
    "fire>=0.7.1",
    "gensim",
    "google-api-python-client>=2.190.0",
    "graphviz>=0.21",
    "icecream>=2.1.10",
    "imblearn>=0.0",
    "matplotlib>=3.10.8",
    "matplotlib-inline>=0.2.1",
    "mediapipe>=0.10.31",
    "mplfinance>=0.12.10b0",
    "numpy",
    "opencv-python>=4.11.0.86",
    "openpyxl",
    "pandas",
    "pandas-stubs>=3.0.0.260204",
    "plotly>=6.5.1",
    "pre-commit>=4.5.1",
    "psutil",
    "pydantic>=2.12.5",
    "pygame",
    "pysnooper>=1.2.3",
    "python-dotenv>=1.2.1",
    "requests",
    "rich>=14.2.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "selenium>=4.39.0",
    "sqlalchemy>=2.0.47",
    "statsmodels>=0.14.6",
    "tqdm>=4.67.3",
    "types-requests>=2.32.4.20260107",
    "uvicorn>=0.40.0",
    "wandb>=0.25.0",
    "weave>=0.52.28",
]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "ipykernel>=7.1.0",
    "isort>=8.0.0",
    "nbconvert>=7.16.6",
    "notebook>=7.0.0",
    "pysnooper>=1.2.3",
]

[tool.uv.workspace]
members = [
    "TIL/ml",
]
